Surrogate key changes for project fact types
